@@ -1,3 +1,4 @@
+2014-06-09 Fixed bug with TextAudio addon on Safari and Opera
 2014-06-06 New addon - TextAudio
 2014-06-06 Added support for touches on Windows 8 Mobile in Slider module
 2014-05-28 Fixed issue with MathJax in Multiplegap addon
